# meteo_station

./: .gitignore  README.md  alembic.ini  config.py  pyproject.toml
alembic/: README  env.py
alembic/versions/: 000001_create_table_user.py  000002_creating_meteostation_table.py  000003_fix_user_id_fiels_in_ms.py
src/: database.py  main.py
src/auth/: cookie.py  dependencies.py  exceptions.py  jwt.py  router.py  schemas.py  service.py
src/base/: dependencies.py  exceptions.py  models.py  repository.py  schemas.py  uow.py  utils.py
src/meteo_station/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/user/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
tests/: test_main.py
